#31 added JVM options for Neo4j v4 to shell scripts